deployments/pathweb/workloads/home-network/ipfs-kubo/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ipfs-kubo
  namespace: home-network
  labels:
    app.kubernetes.io/name: ipfs-kubo
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ipfs-kubo
  serviceName: ipfs-kubo-headless
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ipfs-kubo
    spec:
      nodeSelector:
        node-group: baldric
      containers:
      - name: ipfs-kubo
        image: ipfs/kubo:latest
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 4001
          name: swarm
        - containerPort: 4001
          name: swarm-udp
          protocol: UDP
        - containerPort: 5001
          name: api
        volumeMounts:
        - name: ipfs-data
          mountPath: /data/ipfs
      volumes:
      - name: ipfs-data
        nfs:
          server: 10.229.229.12
          path: /mnt/hdd/applications/ipfs
