deployments/pathweb/workloads/home-network/ipfs-kubo/ipfs-gateway-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ipfs-gateway-http
  labels:
    app.kubernetes.io/name: ipfs-kubo
spec:
  parentRefs:
  - name: ipfs-gateway-http
    namespace: home-network
    sectionName: http
    kind: Gateway
  hostnames:
  - "ipfsgw.services.home.yrf.me"
  - "*.ipfs.ipfsgw.services.home.yrf.me"
  - "*.ipns.ipfsgw.services.home.yrf.me"
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ipfs-gateway-https
  labels:
    app.kubernetes.io/name: ipfs-kubo
    external-dns: local-pdns
spec:
  parentRefs:
  - name: ipfs-gateway
    namespace: home-network
    sectionName: https
    kind: Gateway
  hostnames:
  - "ipfsgw.services.home.yrf.me"
  - "*.ipfs.ipfsgw.services.home.yrf.me"
  - "*.ipns.ipfsgw.services.home.yrf.me"
  rules:
  - backendRefs:
    - name: ipfs-kubo-headless
      port: 8080
